--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -22,6 +23,7 @@
     "@types/node": "^20.17.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.0.9",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "prisma": "^6.5.0",
